--- a/CMSNewUI/Views/Shared/_Layout.cshtml
+++ b/CMSNewUI/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                 <div class="container-fluid expanded-panel">
                     <div class="row">
                         <div id="logo" class="col-xs-12 col-sm-2">
-                            <a href="index_v1.html"><img src="Assets/img/MitraisCMS.PNG" /></a>
+                            <a href="Home"><img src="Assets/img/MitraisCMS.PNG" /></a>
                         </div>
                         <div id="top-panel" class="col-xs-12 col-sm-10">
                             <div class="row">
