added link in bootstrap table (table formatting)

--- a/CMSNewUI/Views/SelfReview/Index.cshtml
+++ b/CMSNewUI/Views/SelfReview/Index.cshtml
@@ -70,11 +70,6 @@
                             <span class="lbl">PMBOK</span>
                         </a>
                     </li>
-                    <li class="hidden-xs">
-                        <a href="SelfReviewDetail">
-                            <span class="lbl">Professional behaviour & attitude (Test)</span>
-                        </a>
-                    </li>
                 </ul>
             </li>
         </ul>
@@ -105,7 +100,7 @@
                     <tr>
                         <th data-field="comp_item">Competency Item</th>
                         <th data-field="last_result">Last Result</th>
-                        <th data-field="self_review">Self Review</th>
+                        <th data-field="self_review" data-formatter="linkFormatter">Self Review</th>
                         <th data-field="champ_review">Champion Review</th>
                         <th data-field="spv_review">Supervisor Review</th>
                     </tr>
