changed tooltip data placement on self review detail page

--- a/CMSNewUI/Views/SelfReviewDetail/Index.cshtml
+++ b/CMSNewUI/Views/SelfReviewDetail/Index.cshtml
@@ -2,7 +2,7 @@
     <div id="page-header-title" class="col-xs-12 col-sm-12 col-md-12">
         <div id="page-title" class="col-xs-12 col-sm-3 col-md-3">
             <span id="sub-title">SELF REVIEW</span>
-            <h3>Professional behaviour & attitude&nbsp;<a href='#' data-toggle='tooltip' title='Professional behaviour & attitude'><span class='glyphicon glyphicon-question-sign'></span></a></h3>
+            <h3>Professional behaviour & attitude&nbsp;<a href='#' data-toggle='tooltip' data-placement="right" title='Professional behaviour & attitude'><span class='glyphicon glyphicon-question-sign'></span></a></h3>
         </div>
         <div id="element-title">
         </div>
