changed data field

--- a/CMSNewUI/Views/SelfReview/Index.cshtml
+++ b/CMSNewUI/Views/SelfReview/Index.cshtml
@@ -98,11 +98,11 @@
                    data-show-export="true">
                 <thead>
                     <tr>
-                        <th data-field="comp_item">Competency Item</th>
-                        <th data-field="last_result">Last Result</th>
-                        <th data-field="self_review" data-formatter="linkFormatter">Self Review</th>
-                        <th data-field="champ_review">Champion Review</th>
-                        <th data-field="spv_review">Supervisor Review</th>
+                        <th data-field="CompItem">Competency Item</th>
+                        <th data-field="LastResult">Last Result</th>
+                        <th data-field="SelfReview" data-formatter="linkFormatter">Self Review</th>
+                        <th data-field="ChampReview">Champion Review</th>
+                        <th data-field="SpvReview">Supervisor Review</th>
                     </tr>
                 </thead>
             </table>
