--- a/CMSNewUI/Views/Shared/_Layout.cshtml
+++ b/CMSNewUI/Views/Shared/_Layout.cshtml
@@ -16,13 +16,16 @@
     <link href="Assets/plugins/select2/select2.css" rel="stylesheet">
     <link href="Assets/plugins/justified-gallery/justifiedGallery.css" rel="stylesheet">
     <link href="Assets/css/style_v1.css" rel="stylesheet">
-    <!-- Mitrais CMS css -->
+    <!-- Mitrais CMS CSS -->
     <link href="Assets/css/mitrais.css" rel="stylesheet">
     <link href="Assets/plugins/chartist/chartist.min.css" rel="stylesheet">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="Assets/plugins/font-awesome/css/font-awesome.min.css">
     <!-- Bootstrap-table CSS -->
     <link href="Assets/plugins/bootstrap-table/bootstrap-table.min.css" rel="stylesheet" />
+    <!-- jQuery Filer CSS -->
+    <link href="Assets/plugins/jquery-filer/css/jquery.filer.css" rel="stylesheet">
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
             <script src="http://getbootstrap.com/docs-assets/js/html5shiv.js"></script>
@@ -148,7 +151,7 @@
         <!--Start Container-->
         <div id="main" class="container-fluid">
             <div id="ajax-page">
-                @RenderBody();
+                @RenderBody()
             </div>
         </div>
         <!--End Container-->
@@ -175,6 +178,9 @@
         <script type="text/javascript" src="Assets/plugins/table-export-jquery/libs/jsPDF-AutoTable/jspdf.plugin.autotable.js"></script>
         <script type="text/javascript" src="Assets/plugins/table-export-jquery/libs/html2canvas/html2canvas.min.js"></script>
         <script type="text/javascript" src="Assets/plugins/table-export-jquery/tableExport.min.js"></script>
+        <!-- jQuery Filer JS -->
+        <script src="Assets/plugins/jquery-filer/js/jquery.filer.min.js" type="text/javascript"></script>
+        <script src="Assets/plugins/jquery-filer/js/custom.js" type="text/javascript"></script>
     </div>
     <!-- end of #outer -->
 </body>
