--- a/CMSNewUI/Views/SelfReviewDetail/Index.cshtml
+++ b/CMSNewUI/Views/SelfReviewDetail/Index.cshtml
@@ -49,36 +49,81 @@
             </div>
         </div>
 
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h4 class="panel-title">ADD ATTACHMENT</h4>
-            </div>
-            <div class="panel-body">
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <label class="control-label col-sm-2" for="url">URL Address:</label>
-                        <div class="col-sm-10">
-                            <input type="url" class="form-control" id="url" placeholder="Enter URL Address">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-2" for="pwd">File:</label>
-                        <div class="col-sm-10">
-                            <div class="input-group">
-                                <label class="input-group-btn">
-                                    <span class="btn btn-primary">
-                                        Browse File&hellip; <input type="file" style="display: none;" multiple>
-                                    </span>
-                                </label>
-                                <input type="text" class="form-control" readonly>
+        <div class="col-xs-12 col-sm-12 col-md-5 sidepanel" style="padding-left:0px; padding-right:0px">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">ADD ATTACHMENT</h4>
+                </div>
+                <div class="panel-body">
+                    <form class="form-horizontal" id="form-attachment">
+                        <div class="form-group">
+                            <label class="control-label col-sm-4 col-md-4 col-xs-12 " for="url">Attachment Type</label>
+                            <div class="col-sm-8 col-md-8 col-xs-12">
+                                <select class="demo-default btn btn-default" id="cmb-attachtype">
+                                    <option value="attinput-url">URL</option>
+                                    <option value="attinput-file">File</option>
+                                </select>
                             </div>
                         </div>
+                        <div class="form-group" id="attinput-url">
+                            <label class="control-label col-sm-4 col-md-4 col-xs-12 " for="url">Address</label>
+                            <div class="col-sm-8 col-md-8 col-xs-12">
+                                <input type="url" class="form-control" id="url" placeholder="Enter URL Address">
+                            </div>
+                        </div>
+                        <div class="form-group" style="display:none" id="attinput-file">
+                            <label class="control-label col-sm-4 col-md-4 col-xs-12" for="pwd">File</label>
+                            <div class="col-sm-8 col-md-8 col-xs-12">
+                                <div class="input-group">
+                                    <label class="input-group-btn">
+                                        <span class="btn btn-primary">
+                                            Browse File&hellip; <input type="file" name="files[]" id="filer_input" multiple="multiple" style="display:none">
+                                        </span>
+                                    </label>
+                                    <input type="text" class="form-control" readonly>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="row" style="padding-right:10px">
+                        <button class="btn btn-primary pull-right" id="btn-submit">Submit</button>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-7 sidepanel" style="padding-right:0px; min-height:211px">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">ATTACHMENTS</h4>
+                </div>
+                <div class="panel-body">
+                    <div id="upload-item">
+                        <table id="tbl-file" class="table table-hover table-borderless" style="width:100%">
+                            <thead>
+                                <tr>
+                                    <th style="width:100px">Type</th>
+                                    <th style="width:159px">Description</th>
+                                    <th style="width:100px"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr><td colspan="3"></td></tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row group" style="padding:10px">
+            <button class="btn btn-primary pull-right">Launch</button>
+            <button class="btn btn-primary pull-right">Delete</button>
+            <button class="btn btn-primary pull-right">Save</button>
+            <button class="btn btn-primary pull-right">Close</button>
+        </div>
     </div>
-    <div class="col-xs-12 col-sm-5 col-md-75" style="background-color: #EDF2F6; height=500px">
+    <div class="col-xs-12 col-sm-5 col-md-5" style="background-color: #EDF2F6; height=500px">
         <h4>COMPETENCY DEFINITION</h4>
         <p>Develop yourself and where appropriate others in the context of the Mitrais competency framework. To be aware of one strengths and weakness and actively initiates and illicits feedback.</p>
 
