--- a/CMSNewUI/Assets/css/mitrais.css
+++ b/CMSNewUI/Assets/css/mitrais.css
@@ -222,3 +222,9 @@ hr {
 .group > .btn {
     margin-left: 5px;
 }
+
+/* scrollable table*/
+.table-scroable {
+    height: 100px;
+    overflow: auto;
+}
