--- a/CMSNewUI/Views/SelfReviewDetail/Index.cshtml
+++ b/CMSNewUI/Views/SelfReviewDetail/Index.cshtml
@@ -88,7 +88,7 @@
                     <h4 class="panel-title">ATTACHMENTS</h4>
                 </div>
                 <div class="panel-body">
-                    <div id="upload-item">
+                    <div id="upload-item" class="table-scroable">
                         <table id="tbl-file" class="table table-hover table-borderless" style="width:100%">
                             <thead>
                                 <tr>
