--- a/CMSNewUI/Views/SelfReviewDetail/Index.cshtml
+++ b/CMSNewUI/Views/SelfReviewDetail/Index.cshtml
@@ -9,7 +9,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12 col-sm-7 col-md-7" style="background-color: white; height=500px">
+    <div class="col-xs-12 col-sm-7 col-md-7" style="background-color: white;">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">MY CLAIM</h4>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="form-horizontal">
-                        <div class="form-group" id="attinput-url">
+                        <div class="form-group" >
                             <label class="control-label col-sm-3 col-md-3 col-xs-12 " for="url">Address</label>
                             <div class="col-sm-9 col-md-9 col-xs-12">
                                 <form action="javascript:saveURL()">
@@ -89,16 +89,16 @@
                 </div>
                 <div class="panel-body">
                     <div id="upload-item">
-                        <table id="tbl-file" class="table table-hover table-borderless" style="width:100%">
+                        <table id="tbl-file" class="table table-borderless" style="width:100%">
                             <thead>
                                 <tr>
-                                    <th style="width:100px">Type</th>
-                                    <th style="width:159px">Description</th>
-                                    <th style="width:100px"></th>
+                                    <th style="width:60px">Type</th>
+                                    <th style="width:258px">Description</th>
+                                    <th style="width:25px"></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr><td colspan="3"></td></tr>
+                                <tr><td colspan="3" id="jfiler-append" style="border-bottom: 0px;padding: 0px;"></td></tr>
                             </tbody>
                         </table>
                     </div>
@@ -111,7 +111,7 @@
             <button class="btn btn-primary pull-right">Close</button>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-5 col-md-5" style="background-color: #EDF2F6; height=500px">
+    <div class="col-xs-12 col-sm-5 col-md-5" style="background-color: #EDF2F6;">
         <h4>COMPETENCY DEFINITION</h4>
         <p>Develop yourself and where appropriate others in the context of the Mitrais competency framework. To be aware of one strengths and weakness and actively initiates and illicits feedback.</p>
 
